--- a/README.Rmd
+++ b/README.Rmd
@@ -22,10 +22,11 @@ The goal of mysum is to ...
 
 ## Installation
 
-You can install the development version of mysum like so:
+You can install the development version of mysum from [GitHub](https://github.com/) with:
 
 ``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+# install.packages("pak")
+pak::pak("EdyKayi/mysum")
 ```
 
 ## Example
